welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:8: error: type mismatch;
 found   : Unit
 required: Boolean
    			if (a>0) { if (b > 0) {return false} 
                        ^